# vault-intake

./: .gitignore  CHANGELOG.md  ELIO-SETUP.md  README.md  SKILL.md  pyproject.toml
scripts/: flush_nlm.py  install_skill.py  intake.py  resolve_config.py
src/vault_intake/: bootstrap.py  classify.py  config.py  detect.py  frontmatter.py  next_actions.py  notebooklm.py  orchestrator.py  para.py  refine.py  route.py  wikilinks.py
tests/: conftest.py  test_bootstrap.py  test_classify.py  test_cli.py  test_config.py  test_confirm_and_write.py  test_detect.py  test_flush_nlm_script.py  test_frontmatter.py  test_install_script.py  test_intake_script.py  test_next_actions.py  test_notebooklm.py  test_orchestrator.py  test_para.py  test_refine.py  test_route.py  test_wikilinks.py
