[project]
name = "vault-intake"
version = "0.2.1"
description = "Memory Branch M2: trusted capture skill for Second-Brain vaults (fixed_domains + emergent modes)"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [
    { name = "Jon Gerton", email = "jgerton@gmail.com" },
]
dependencies = [
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_intake"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
